[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ioc-service"
version = "1.9.2"
description = "Threat Intelligence Feed Aggregator and Export Service"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 160

[tool.coverage.run]
source = ["app"]
